# CronDNS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  apache-crondns.conf  build.py  config.yaml  crondns.cron  docker-entrypoint.sh  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  registrar-request.md
.github/workflows/: docker-release.yml  lint.yml
src/conf/: config.php
src/lib/: domain.php  dyn_dns_update.php  logger.php  orm.php  settings.php  utils.php
src/lib/dyn_dns/: BaseProvider.php  CloudflareProvider.php  HetznerProvider.php  MailinaboxProvider.php  NamecheapProvider.php  StratoProvider.php
src/public/: change-password.php  domains.php  home.php  index.php  php-info.php  settings.php
src/public/api/: change-password.php  login.php  logout.php  public-ip.php  regen-apikey.php  server-public-ip.php
src/public/css/: fonts.css  styles.css
src/templates/: base.j2  dashboard.j2
